ci: add kubernetes support (#161)
